[gd_scene load_steps=4 format=3 uid="uid://deklgvcr480ji"]

[ext_resource type="Script" uid="uid://c3cirvip7us7g" path="res://scenes/characters/player/phone/phone_ui/screens/chats_screen/list_chat.gd" id="1_d84nc"]
[ext_resource type="Texture2D" uid="uid://7mlokt7p4kgb" path="res://assets/images/placeholder.png" id="1_q4etd"]
[ext_resource type="Texture2D" uid="uid://c0p6eoqw500a3" path="res://assets/images/notification.png" id="3_sepc7"]

[node name="ListChat" type="MarginContainer"]
custom_minimum_size = Vector2(0, 230)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d84nc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -108.0
offset_right = 108.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("1_q4etd")
stretch_mode = 5

[node name="NotificationCircle" type="TextureRect" parent="HBoxContainer/Control/TextureRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 0
texture = ExtResource("3_sepc7")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="ContactName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Contact Name"

[node name="LastMessage" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Last message..."
